# tariff-turbulence-simulator

./: .gitignore  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
src/: index.md  responsive-test.md  style.css
src/.observablehq/: deploy.json
src/components/: AfricaHexmap.jsx  BarChart.jsx  ChartSubTitle.jsx  ChartTitle.jsx  Chevron.jsx  ColumnPlot.jsx  ControlPanel.jsx  CountryCarousel.jsx  Countrycarousel.jsx  Deck.jsx  DescriptionText.jsx  DownloadShareButtons.jsx  Dropdown.jsx  DropdownContext.jsx  ExposureCard.jsx  Headline.jsx  Intro.jsx  IntroText.jsx  Legend.jsx  LinePlot.jsx  Methodology.jsx  MutualExclusion.jsx  SelectionCard.jsx  SingleCountryCard.jsx  Slider.jsx  SubsectionText.jsx  SubsectionTitle.jsx  TariffButtons.jsx  TariffPill.jsx  TariffPills.jsx  ToggleButton.jsx  Tooltip.jsx
src/data/: .gitignore  africa_exports_to_us_2002_2023.csv.py  africa_exports_to_us_2002_2023_baci.csv.py  africa_exports_to_us_2022_2024_ustrade.csv.py  africa_exports_to_us_2024.csv.py  africa_exports_to_us_historical.csv.py  africa_exports_to_us_recent.csv.py  africa_hexmap.geojson  common.py  config.py  etr.py  helpers.py  us_africa_trade.csv.py  us_africa_trade.py
src/js/: colorPalette.js  copyText.js  format.js  riskThresholds.js  transformData.js
src/styles/: chart-subtitle.css  chart-title.css  column-plot.css  country-carousel.css  deck.css  description-text.css  download-share-buttons.css  dropdown.css  exposure-card.css  flag-icon.css  headline.css  intro-text.css  intro.css  layout.css  (+18 more)
(+43 files in other folders)
