[project]
name = "cocoa-exploration"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.3"
bblocks_data_importers = { git = "https://github.com/ONEcampaign/bblocks_data_importers.git", rev = "36-comtradebaci-importer" }
black = "^25.1.0"
country-converter = "^1.3"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
