[project]
name = "tariff-simulator"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.3"
black = "^25.1.0"
country-converter = "^1.3"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
