[project]
name = "tariff-simulator"
version = "0.1.0"
description = "A simulator for calculating tariffs."
requires-python = ">=3.13"
dependencies = [
    "bblocks-data-importers",
    "bblocks-places>=0.0.4",
    "country-converter==1.3",
    "pandas>=2.3.3",
]

[tool.uv.sources]
bblocks-data-importers = { git = "https://github.com/ONEcampaign/bblocks_data_importers.git", rev = "baci-refactor" }
